fix: fixed overflow bug

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
+  box-sizing: border-box;
+
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -32,6 +34,7 @@
 }
 
 html, body {
+
   margin: 0;
   padding: 0;
   height: 100%;
