--- a/src/templates/components/chatList/chatList.scss
+++ b/src/templates/components/chatList/chatList.scss
@@ -3,4 +3,6 @@
   overflow-y: auto; 
   display: flex;
   flex-direction: column;
+  padding: 0 0 10px 0;
+  margin: 0;
 }
