--- a/src/templates/components/chatMenu/chatMenu.scss
+++ b/src/templates/components/chatMenu/chatMenu.scss
@@ -4,6 +4,7 @@
   justify-content: space-between;
   background-color: white;
   padding-bottom: 10px;
+  padding-top: 10px;
   border-bottom: 1px solid var(--color-light-grey);
 
   &__actions-container {
