--- a/src/templates/components/messageQuill/messageQuill.scss
+++ b/src/templates/components/messageQuill/messageQuill.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  padding-bottom: 10px;
 
   &__attachment {
     display: flex;
