--- a/src/templates/components/search/search.scss
+++ b/src/templates/components/search/search.scss
@@ -4,6 +4,7 @@
   width: 100%;
   border-bottom: 1px solid var(--color-light-grey);
   padding-bottom: 14px;
+  padding-top: 10px;
 }
 
 .search__input {
