--- a/src/templates/pages/main/main.scss
+++ b/src/templates/pages/main/main.scss
@@ -17,7 +17,8 @@
 
   border-right: 1px solid var(--color-light-grey);
 
-  padding: 10px;
+  padding: 0 10px 0 10px;
+  margin: 0;
 }
 
 .main-page_chosen-chat {
@@ -27,5 +28,6 @@
   grid-column: 2;
   height: 100vh;
 
-  padding: 10px 20px;
+  padding: 0 20px 0 20px;
+  margin: 0;
 }
